# LLVMSlicer

./: .gitignore  CMakeLists.txt  Makefile.common  Makefile.common.in  README  config.status  fork.changes
autoconf/: aclocal.m4  configure.ac
include/: FunctionStaticSlicer.h  LLVM.h  LLVMSupport.h  Matcher.h  PointsTo.h  RuleExpressions.h  StaticSlicer.h
lib/: CMakeLists.txt  Makefile
lib/Callgraph/: Callgraph.cpp  Makefile
lib/Languages/: LLVM.cpp  Makefile
lib/Matcher/: Makefile  Matcher.cpp
lib/Modifies/: Makefile  ModStats.cpp  Modifies.cpp
lib/PointsTo/: Makefile  PointsTo.cpp
lib/Slicing/: FunctionStaticSlicer.cpp  Kleerer.cpp  Makefile  Prepare.cpp  StaticSlicer.cpp
src/: CMakeLists.txt
src/Slicing/: PostDominanceFrontier.h
test/: Makefile  a.ll  b.c  b.ll  c.c  d.c  linked.ll
